--- a/html/public/themes/winflat.raindrops/style.css
+++ b/html/public/themes/winflat.raindrops/style.css
@@ -549,6 +549,10 @@ ul.quiet {
        text-align: center;
    }
 
+   ul, ol {
+       text-align: left;
+   }
+
    div.card p, div.card h2, div.card h5 {
       margin-left: 14px;
       margin-right: 8px;
